--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "apple-auth": "^1.0.9",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3"
   },
   "scripts": {
     "start": "node server.js"
